Fixed issue where styling for dark mode would not be applied.

--- a/resources/light-mode-style.css
+++ b/resources/light-mode-style.css
@@ -54,6 +54,7 @@ button {
   margin-top: 51px;
   font-family: "Inter", sans-serif;
   font-size: 16px;
+  font-weight: 700;
   background-color: #e15a97;
   border-radius: 5px;
 }
@@ -72,6 +73,7 @@ button {
   gap: 24px;
   border-top: 1px solid black;
   font-family: "Inter", sans-serif;
+  font-weight: 700;
 }
 
 #password-box-1 {
